--- a/style.css
+++ b/style.css
@@ -1,5 +1,4 @@
 body {
-
     margin: 0;
     padding: 0;
     font-family: 'Lato', sans-serif;
@@ -198,6 +197,86 @@ a {
     text-decoration: none;
     color: white;
 }
+
+.projectsExamples{
+    width:100vw;
+    box-sizing: border-box;
+    padding-top:5rem;
+    text-align: left;
+}
+
+.projectCard{
+    display: inline-block;
+    width:400px; 
+    height: 560px;
+    background-color: rgba(7, 77, 114);
+    margin: 2rem;
+    text-align: left;
+    position: relative;
+}
+
+.projectCard .projectImage{
+    width: 100%;
+    height:350px;
+}
+
+.projectCard header{
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-left: 1rem;
+    font-size:1.5rem;
+    box-sizing: border-box;
+}
+
+.projectCard header img{
+    width:20px;
+}
+
+.projectCard .description{
+    padding: 1rem;
+    font-size: 1.25rem;
+}
+
+.projectCard .overlay{
+    position: absolute;
+    width:100%;
+    height: 100%;
+    top:0;
+    left:0;
+    right:0;
+    bottom:0;
+    background-color:rgba(58, 60, 65, 0.94);
+    opacity: 0;
+    transition: .2s;
+    padding-top: 6rem;
+    box-sizing: border-box;
+}
+
+.projectCard:hover .overlay{
+    opacity: 1;
+    cursor: pointer;
+}
+
+.projectCard .overlay i{
+    font-size:4rem;
+}
+
+.projectCard .overlay .iconContainer{
+    width:150px;
+    height:150px;
+    box-sizing: border-box;
+    text-align: center;
+    padding-top: 2.5rem;
+    background-color:  #1d1c1f;
+    border-radius: 50%;
+    margin: auto;
+    margin-bottom: 3em;
+}
+
+.projectCard .overlay .iconContainer:hover{
+    background-color:#2c2b2e;
+}
+
 
 @media screen and (max-width: 950px) {
     nav{
