--- a/style.css
+++ b/style.css
@@ -212,15 +212,9 @@ a {
 }
 
 .projectsExamples{
-    width:100vw;
     box-sizing: border-box;
     padding-top:5rem;
-}
-
-.leftWrapper{
-    text-align: left;
-    width: 95%;
-    margin: auto;
+    text-align: center;
 }
 
 .projectCard{
@@ -273,7 +267,7 @@ a {
 
 .projectCard:hover .overlay{
     opacity: 1;
-    cursor: pointer;
+/*    cursor: pointer;*/
 }
 
 .projectCard .overlay i{
@@ -294,6 +288,23 @@ a {
 
 .projectCard .overlay .iconContainer:hover{
     background-color:#2c2b2e;
+    cursor: pointer;
+}
+
+.iconDisabled{
+    width:150px;
+    height:150px;
+    box-sizing: border-box;
+    text-align: center;
+    padding-top: 2.5rem;
+    border-radius: 50%;
+    margin: auto;
+    margin-bottom: 3em;
+    background-color: #c62e2e;
+}
+
+.iconDisabled:hover{
+    background-color: #c62e2e;
 }
 
 
